Definindo melhor os acionistas e parceiros

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Quem somos ?</h1>
 
         <p>Fundada em 1986 no dia 1° de novembro, por
-            Naotoshi Zin nosso atual orientador. Hidetaka Miyazaki nosso atual presidente e um dos melhores
+            Naotoshi Zin nosso atual orientador e Hidetaka Miyazaki nosso atual presidente e um dos melhores
             level-designer do mundo dos videogames,
             idealizador de um dos melhores e maiores jogos da atualidade.</p>
 
@@ -50,12 +50,32 @@
             <li class="kadokawa">KADOKAWA CORPORATION</li>
         </ul>
         <br>
-        <b>Principais acionistas</b>
+        <b>Principais acionistas: </b>
         <ul>
             <li class="kadokawa">KADOKAWA CORPORATION</li>
             <li class="sixjoy">Sixjoy Hong Kong Limited</li>
             <li class="sony">Sony Interactive Entertainment Inc.</li>
         </ul>
+
+        <h2>Mas afinal quem são nossos acionistas e parceiros? </h2>
+
+        <h3><b>-</b> Microsoft Japan Co., Ltd. : </h3>
+        <p>
+            Microsoft Japan Co. é uma empresa subsidiaria da Microsoft no Japão com sede americana que produz consoles
+            de jogos XBOX desde o primeiro ao Series. Localizando-se em Tokyo próximo a estação de Shinagawa no distrito
+            de Minato-ku.
+        </p>
+        <h3><b>- Sony Interactive Entertainment LLC.</b></h3>
+        <p>
+            A Sony Interactive Entertainment anteriormente conhecida como Sony Computer Entertainment, é uma empresa
+            multinacional de videogames e entretenimento digital de propriedade integral do conglomerado multinacional
+            Sony. Também produz os videogames Playstation, e possuem alguns exclusivos feitos por nós como Bloodborne e
+            Demon's Souls, que foi quem começou com nossa melhor franquia Dark Souls.
+        </p>
+
+
+
+
 
     </div>
 
