Adicionei mais algumas informações

--- a/index.html
+++ b/index.html
@@ -65,18 +65,41 @@
             de jogos XBOX desde o primeiro ao Series. Localizando-se em Tokyo próximo a estação de Shinagawa no distrito
             de Minato-ku.
         </p>
-        <h3><b>- Sony Interactive Entertainment LLC.</b></h3>
+        <h3><b>-</b> Sony Interactive Entertainment LLC. :</h3>
         <p>
             A Sony Interactive Entertainment anteriormente conhecida como Sony Computer Entertainment, é uma empresa
             multinacional de videogames e entretenimento digital de propriedade integral do conglomerado multinacional
             Sony. Também produz os videogames Playstation, e possuem alguns exclusivos feitos por nós como Bloodborne e
             Demon's Souls, que foi quem começou com nossa melhor franquia Dark Souls.
         </p>
-
-
-
-
-
+        <h3><b>-</b> Nintendo Co., Ltd.</h3>
+        <p>
+            A Nintendo Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos e consoles sediada em
+            Quioto. Foi fundada em setembro de 1889 pelo artesão Fusajiro Yamauchi e originalmente era uma fabricante de
+            cartas de baralho tradicionais japonesas.
+        </p>
+        <h3><b>-</b> Capcom Co., Ltd.</h3>
+        <p>
+            Capcom Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada em Osaka. Ela é
+            conhecida por ter criado franquias multimilionárias, tais como Resident Evil, Street Fighter, Mega Man,
+            Devil May Cry, Dino Crisis e Onimusha. Sua sede principal está situada em Chuo-ku, Osaka.
+        </p>
+        <h3><b>-</b> BANDAI NAMCO Entertainment Inc.</h3>
+        <p>
+            A Bandai Namco Entertainment Inc. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada
+            em Tóquio. Foi fundada em março de 2006 como Namco Bandai Games, estabelecida após a fusão da Bandai com a
+            Namco em setembro de 2005, que resultou na formação da Bandai Namco Holdings.
+        </p>
+        <h3><b>-</b> KADOKAWA CORPORATION</h3>
+        <p>
+            A segunda e atual iteração da Kadokawa Corporation, é um conglomerado de mídia japonês, anteriormente
+            chamada Kadokawa Dwango Corporation e foi criada como resultado da fusão da Kadokawa Corporation original e
+            da Dwango Co., Ltd. em 1 de outubro de 2014.
+        </p>
+        <h3><b>-</b> Sixjoy Hong Kong Limited.</h3>
+        <p>
+            Desenvolvedora de software mobile, com jogos como Death Coming, Code:D-Blood, Kingdoms Arise.
+        </p>
     </div>
 
 </body>
