--- a/index.html
+++ b/index.html
@@ -41,62 +41,81 @@
         <p>Atualmente temos 349 funcionários com foco em produção de jogos e conteúdo para internet, nosso atual capital
             é de aproximadamente 132 milhões. <b>Temos grandes parceiros de negócios</b>, tais como:</p>
 
-        <ul>
-            <li class="microsoft">Microsoft Japan Co., Ltd.</li>
-            <li class="sony">Sony Interactive Entertainment LLC</li>
-            <li class="nintendo">Nintendo Co., Ltd.</li>
-            <li class="capcom">CAPCOM Co., Ltd.</li>
-            <li class="bandai namco">BANDAI NAMCO Entertainment Inc.</li>
-            <li class="kadokawa">KADOKAWA CORPORATION</li>
+        <ul class="linklist">
+            <a href="#microsoft">
+                <li class="microsoftlist">Microsoft Japan Co., Ltd.</li>
+            </a>
+            <a href="#sony">
+                <li class="sonylist">Sony Interactive Entertainment LLC</li>
+            </a>
+            <a href="#nintendo">
+                <li class="nintendolist">Nintendo Co., Ltd.</li>
+            </a>
+            <a href="#capcom">
+                <li class="capcomlist">CAPCOM Co., Ltd.</li>
+            </a>
+            <a href="#bandai">
+                <li class="bandai namcolist">BANDAI NAMCO Entertainment Inc.
+            </a></li>
+            <a href="#kadokawa">
+                <li class="kadokawalist">KADOKAWA CORPORATION</li>
+            </a>
         </ul>
         <br>
         <b>Principais acionistas: </b>
-        <ul>
-            <li class="kadokawa">KADOKAWA CORPORATION</li>
-            <li class="sixjoy">Sixjoy Hong Kong Limited</li>
-            <li class="sony">Sony Interactive Entertainment Inc.</li>
+        <ul class="linklist2">
+            <a href="#kadokawa">
+                <li class="kadokawalist">KADOKAWA CORPORATION</li>
+            </a>
+            <a href="#teste">
+                <li class="sixjoylist">Sixjoy Hong Kong Limited</li>
+            </a>
+            <a href="#sony">
+                <li class="sonylist">Sony Interactive Entertainment Inc.</li>
+            </a>
         </ul>
 
-        <h2>Mas afinal quem são nossos acionistas e parceiros? </h2>
+        <h2 id="microsoft">Mas afinal quem são nossos acionistas e parceiros? </h2>
 
-        <h3><b>-</b> Microsoft Japan Co., Ltd. : </h3>
+        <h3 id="sony"><b>-</b> Microsoft Japan Co., Ltd. : </h3>
         <p>
             Microsoft Japan Co. é uma empresa subsidiaria da Microsoft no Japão com sede americana que produz consoles
             de jogos XBOX desde o primeiro ao Series. Localizando-se em Tokyo próximo a estação de Shinagawa no distrito
             de Minato-ku.
         </p>
-        <h3><b>-</b> Sony Interactive Entertainment LLC. :</h3>
+        <h3 id="nintendo"><b>-</b> Sony Interactive Entertainment LLC. :</h3>
         <p>
             A Sony Interactive Entertainment anteriormente conhecida como Sony Computer Entertainment, é uma empresa
             multinacional de videogames e entretenimento digital de propriedade integral do conglomerado multinacional
             Sony. Também produz os videogames Playstation, e possuem alguns exclusivos feitos por nós como Bloodborne e
             Demon's Souls, que foi quem começou com nossa melhor franquia Dark Souls.
         </p>
-        <h3><b>-</b> Nintendo Co., Ltd.</h3>
+        <h3 id="capcom"><b>-</b> Nintendo Co., Ltd.</h3>
+
         <p>
             A Nintendo Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos e consoles sediada em
             Quioto. Foi fundada em setembro de 1889 pelo artesão Fusajiro Yamauchi e originalmente era uma fabricante de
             cartas de baralho tradicionais japonesas.
         </p>
-        <h3><b>-</b> Capcom Co., Ltd.</h3>
+        <h3 id="bandai"><b>-</b> Capcom Co., Ltd.</h3>
         <p>
             Capcom Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada em Osaka. Ela é
             conhecida por ter criado franquias multimilionárias, tais como Resident Evil, Street Fighter, Mega Man,
             Devil May Cry, Dino Crisis e Onimusha. Sua sede principal está situada em Chuo-ku, Osaka.
         </p>
-        <h3><b>-</b> BANDAI NAMCO Entertainment Inc.</h3>
+        <h3 id="kadokawa"><b>-</b> BANDAI NAMCO Entertainment Inc.</h3>
         <p>
             A Bandai Namco Entertainment Inc. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada
             em Tóquio. Foi fundada em março de 2006 como Namco Bandai Games, estabelecida após a fusão da Bandai com a
             Namco em setembro de 2005, que resultou na formação da Bandai Namco Holdings.
         </p>
-        <h3><b>-</b> KADOKAWA CORPORATION</h3>
+        <h3 id="sixjoy"><b>-</b> KADOKAWA CORPORATION</h3>
         <p>
             A segunda e atual iteração da Kadokawa Corporation, é um conglomerado de mídia japonês, anteriormente
             chamada Kadokawa Dwango Corporation e foi criada como resultado da fusão da Kadokawa Corporation original e
             da Dwango Co., Ltd. em 1 de outubro de 2014.
         </p>
-        <h3><b>-</b> Sixjoy Hong Kong Limited.</h3>
+        <h3 id="teste"><b>-</b> Sixjoy Hong Kong Limited.</h3>
         <p>
             Desenvolvedora de software mobile, com jogos como Death Coming, Code:D-Blood, Kingdoms Arise.
         </p>
