melhorei as fontes e coloquei ancoras

--- a/index.html
+++ b/index.html
@@ -41,38 +41,38 @@
         <p>Atualmente temos 349 funcionários com foco em produção de jogos e conteúdo para internet, nosso atual capital
             é de aproximadamente 132 milhões. <b>Temos grandes parceiros de negócios</b>, tais como:</p>
 
-        <ul class="linklist">
-            <a href="#microsoft">
-                <li class="microsoftlist">Microsoft Japan Co., Ltd.</li>
-            </a>
-            <a href="#sony">
-                <li class="sonylist">Sony Interactive Entertainment LLC</li>
-            </a>
-            <a href="#nintendo">
-                <li class="nintendolist">Nintendo Co., Ltd.</li>
-            </a>
-            <a href="#capcom">
-                <li class="capcomlist">CAPCOM Co., Ltd.</li>
-            </a>
-            <a href="#bandai">
-                <li class="bandai namcolist">BANDAI NAMCO Entertainment Inc.
-            </a></li>
-            <a href="#kadokawa">
-                <li class="kadokawalist">KADOKAWA CORPORATION</li>
-            </a>
+        <ul>
+
+            <li class="linklist"><a href="#microsoft">Microsoft Japan Co., Ltd. </a></li>
+
+
+            <li class="linklist"><a href="#sony">Sony Interactive Entertainment LLC</a></li>
+
+
+            <li class="linklist"><a href="#nintendo">Nintendo Co., Ltd.</a></li>
+
+
+            <li class="linklist"> <a href="#capcom">CAPCOM Co., Ltd.</a></li>
+
+
+            <li class="linklist"><a href="#bandai">BANDAI NAMCO Entertainment Inc.
+                </a></li>
+
+            <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION</a></li>
+
         </ul>
         <br>
         <b>Principais acionistas: </b>
-        <ul class="linklist2">
-            <a href="#kadokawa">
-                <li class="kadokawalist">KADOKAWA CORPORATION</li>
-            </a>
-            <a href="#teste">
-                <li class="sixjoylist">Sixjoy Hong Kong Limited</li>
-            </a>
-            <a href="#sony">
-                <li class="sonylist">Sony Interactive Entertainment Inc.</li>
-            </a>
+        <ul class="linklist">
+
+            <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION </a></li>
+
+
+            <li class="linklist"><a href="#teste">Sixjoy Hong Kong Limited </a></li>
+
+
+            <li class="linklist"><a href="#sony">Sony Interactive Entertainment Inc.</a></li>
+
         </ul>
 
         <h2 id="microsoft">Mas afinal quem são nossos acionistas e parceiros? </h2>
