--- a/index.html
+++ b/index.html
@@ -11,115 +11,155 @@
 </head>
 
 <body>
-
-    <div id="menu">
-        <img src="images/logos/From_Logo.webp" class="fromlogo">
-        <div class="navLinks">
-            <a href="#" class="links">Quem somos ?</a><br>
-            <a href="#" class="links">Newsletter</a>
-            <details class="detailsNavLinks">
-                <summary>Nossos Jogos</summary>
-                <ul>
-                    <li><a href="#" class="links">Demon's Souls</a></li>
-                    <li><a href="#" class="links">Dark Souls 1</a></li>
-                    <li> <a href="#" class="links">Dark Souls 3</a></li>
-                    <li> <a href="#" class="links">Sekiro Shadows Die Twice</a></li>
-                    <li> <a href="#" class="links">Elden Ring</a></li>
-                </ul>
-            </details>
+    <header>
+        <div id="menu">
+            <img src="images/logos/From_Logo.webp" class="fromlogo">
+            <div class="navLinks">
+                <a href="#" class="links">Quem somos ?</a><br>
+                <a href="#" class="links">Newsletter</a>
+                <details class="detailsNavLinks">
+                    <summary>Nossos Jogos</summary>
+                    <ul>
+                        <li><a href="#" class="links">Demon's Souls</a></li>
+                        <li><a href="#" class="links">Dark Souls 1</a></li>
+                        <li> <a href="#" class="links">Dark Souls 3</a></li>
+                        <li> <a href="#" class="links">Sekiro Shadows Die Twice</a></li>
+                        <li> <a href="#" class="links">Elden Ring</a></li>
+                    </ul>
+                </details>
+            </div>
         </div>
-    </div>
+    </header>
+    <article>
+        <div class="container">
+            <h1>Quem somos ?</h1>
 
-    <div class="container">
-        <h1>Quem somos ?</h1>
+            <p>Fundada em 1986 no dia 1° de novembro, por
+                Naotoshi Zin nosso atual orientador e Hidetaka Miyazaki nosso atual presidente e um dos melhores
+                level-designer do mundo dos videogames,
+                idealizador de um dos melhores e maiores jogos da atualidade.</p>
 
-        <p>Fundada em 1986 no dia 1° de novembro, por
-            Naotoshi Zin nosso atual orientador e Hidetaka Miyazaki nosso atual presidente e um dos melhores
-            level-designer do mundo dos videogames,
-            idealizador de um dos melhores e maiores jogos da atualidade.</p>
+            <p>Atualmente temos 349 funcionários com foco em produção de jogos e conteúdo para internet, nosso atual
+                capital
+                é de aproximadamente 132 milhões. <b>Temos grandes parceiros de negócios</b>, tais como:</p>
 
-        <p>Atualmente temos 349 funcionários com foco em produção de jogos e conteúdo para internet, nosso atual capital
-            é de aproximadamente 132 milhões. <b>Temos grandes parceiros de negócios</b>, tais como:</p>
+            <ul>
 
-        <ul>
-
-            <li class="linklist"><a href="#microsoft">Microsoft Japan Co., Ltd. </a></li>
-
-
-            <li class="linklist"><a href="#sony">Sony Interactive Entertainment LLC</a></li>
+                <li class="linklist"><a href="#microsoft">Microsoft Japan Co., Ltd. </a></li>
 
 
-            <li class="linklist"><a href="#nintendo">Nintendo Co., Ltd.</a></li>
+                <li class="linklist"><a href="#sony">Sony Interactive Entertainment LLC</a></li>
 
 
-            <li class="linklist"> <a href="#capcom">CAPCOM Co., Ltd.</a></li>
+                <li class="linklist"><a href="#nintendo">Nintendo Co., Ltd.</a></li>
 
 
-            <li class="linklist"><a href="#bandai">BANDAI NAMCO Entertainment Inc.
-                </a></li>
-
-            <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION</a></li>
-
-        </ul>
-        <br>
-        <b>Principais acionistas: </b>
-        <ul class="linklist">
-
-            <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION </a></li>
+                <li class="linklist"> <a href="#capcom">CAPCOM Co., Ltd.</a></li>
 
 
-            <li class="linklist"><a href="#teste">Sixjoy Hong Kong Limited </a></li>
+                <li class="linklist"><a href="#bandai">BANDAI NAMCO Entertainment Inc.
+                    </a></li>
+
+                <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION</a></li>
+
+            </ul>
+            <br>
+            <b>Principais acionistas: </b>
+            <ul class="acionistalink">
+
+                <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION </a></li>
 
 
-            <li class="linklist"><a href="#sony">Sony Interactive Entertainment Inc.</a></li>
+                <li class="linklist"><a href="#teste">Sixjoy Hong Kong Limited </a></li>
 
-        </ul>
 
-        <h2 id="microsoft">Mas afinal quem são nossos acionistas e parceiros? </h2>
+                <li class="linklist"><a href="#sony">Sony Interactive Entertainment Inc.</a></li>
 
-        <h3 id="sony"><b>-</b> Microsoft Japan Co., Ltd. : </h3>
-        <p>
-            Microsoft Japan Co. é uma empresa subsidiaria da Microsoft no Japão com sede americana que produz consoles
-            de jogos XBOX desde o primeiro ao Series. Localizando-se em Tokyo próximo a estação de Shinagawa no distrito
-            de Minato-ku.
-        </p>
-        <h3 id="nintendo"><b>-</b> Sony Interactive Entertainment LLC. :</h3>
-        <p>
-            A Sony Interactive Entertainment anteriormente conhecida como Sony Computer Entertainment, é uma empresa
-            multinacional de videogames e entretenimento digital de propriedade integral do conglomerado multinacional
-            Sony. Também produz os videogames Playstation, e possuem alguns exclusivos feitos por nós como Bloodborne e
-            Demon's Souls, que foi quem começou com nossa melhor franquia Dark Souls.
-        </p>
-        <h3 id="capcom"><b>-</b> Nintendo Co., Ltd.</h3>
+            </ul>
 
-        <p>
-            A Nintendo Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos e consoles sediada em
-            Quioto. Foi fundada em setembro de 1889 pelo artesão Fusajiro Yamauchi e originalmente era uma fabricante de
-            cartas de baralho tradicionais japonesas.
-        </p>
-        <h3 id="bandai"><b>-</b> Capcom Co., Ltd.</h3>
-        <p>
-            Capcom Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada em Osaka. Ela é
-            conhecida por ter criado franquias multimilionárias, tais como Resident Evil, Street Fighter, Mega Man,
-            Devil May Cry, Dino Crisis e Onimusha. Sua sede principal está situada em Chuo-ku, Osaka.
-        </p>
-        <h3 id="kadokawa"><b>-</b> BANDAI NAMCO Entertainment Inc.</h3>
-        <p>
-            A Bandai Namco Entertainment Inc. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada
-            em Tóquio. Foi fundada em março de 2006 como Namco Bandai Games, estabelecida após a fusão da Bandai com a
-            Namco em setembro de 2005, que resultou na formação da Bandai Namco Holdings.
-        </p>
-        <h3 id="sixjoy"><b>-</b> KADOKAWA CORPORATION</h3>
-        <p>
-            A segunda e atual iteração da Kadokawa Corporation, é um conglomerado de mídia japonês, anteriormente
-            chamada Kadokawa Dwango Corporation e foi criada como resultado da fusão da Kadokawa Corporation original e
-            da Dwango Co., Ltd. em 1 de outubro de 2014.
-        </p>
-        <h3 id="teste"><b>-</b> Sixjoy Hong Kong Limited.</h3>
-        <p>
-            Desenvolvedora de software mobile, com jogos como Death Coming, Code:D-Blood, Kingdoms Arise.
-        </p>
-    </div>
+            <h2 id="microsoft">Mas afinal quem são nossos acionistas e parceiros? </h2>
+
+            <h3 id="sony"><b>-</b> Microsoft Japan Co., Ltd. : </h3>
+            <p>
+                Microsoft Japan Co. é uma empresa subsidiaria da Microsoft no Japão com sede americana que produz
+                consoles
+                de jogos XBOX desde o primeiro ao Series. Localizando-se em Tokyo próximo a estação de Shinagawa no
+                distrito
+                de Minato-ku.
+            </p>
+            <h3 id="nintendo"><b>-</b> Sony Interactive Entertainment LLC. :</h3>
+            <p>
+                A Sony Interactive Entertainment anteriormente conhecida como Sony Computer Entertainment, é uma empresa
+                multinacional de videogames e entretenimento digital de propriedade integral do conglomerado
+                multinacional
+                Sony. Também produz os videogames Playstation, e possuem alguns exclusivos feitos por nós como
+                Bloodborne e
+                Demon's Souls, que foi quem começou com nossa melhor franquia Dark Souls.
+            </p>
+            <h3 id="capcom"><b>-</b> Nintendo Co., Ltd.</h3>
+
+            <p>
+                A Nintendo Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos e consoles sediada
+                em
+                Quioto. Foi fundada em setembro de 1889 pelo artesão Fusajiro Yamauchi e originalmente era uma
+                fabricante de
+                cartas de baralho tradicionais japonesas.
+            </p>
+            <h3 id="bandai"><b>-</b> Capcom Co., Ltd.</h3>
+            <p>
+                Capcom Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada em Osaka. Ela
+                é
+                conhecida por ter criado franquias multimilionárias, tais como Resident Evil, Street Fighter, Mega Man,
+                Devil May Cry, Dino Crisis e Onimusha. Sua sede principal está situada em Chuo-ku, Osaka.
+            </p>
+            <h3 id="kadokawa"><b>-</b> BANDAI NAMCO Entertainment Inc.</h3>
+            <p>
+                A Bandai Namco Entertainment Inc. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos
+                sediada
+                em Tóquio. Foi fundada em março de 2006 como Namco Bandai Games, estabelecida após a fusão da Bandai com
+                a
+                Namco em setembro de 2005, que resultou na formação da Bandai Namco Holdings.
+            </p>
+            <h3 id="sixjoy"><b>-</b> KADOKAWA CORPORATION</h3>
+            <p>
+                A segunda e atual iteração da Kadokawa Corporation, é um conglomerado de mídia japonês, anteriormente
+                chamada Kadokawa Dwango Corporation e foi criada como resultado da fusão da Kadokawa Corporation
+                original e
+                da Dwango Co., Ltd. em 1 de outubro de 2014.
+            </p>
+            <h3 id="teste"><b>-</b> Sixjoy Hong Kong Limited.</h3>
+            <p>
+                Desenvolvedora de software mobile, com jogos como Death Coming, Code:D-Blood, Kingdoms Arise.
+            </p>
+            <br>
+            <h2>Nossos Jogos</h2>
+
+            <div class="tablejogo">
+                <table>
+                    <tr>
+                        <th>Ano
+                        </th>
+                        <th>Jogo</th>
+                        <th>É exclusivo?</th>
+                    </tr>
+                    <tr>
+                        <td>2009/2020</td>
+                        <td>Demon's Souls</td>
+                        <td>Sim</td>
+                    </tr>
+                </table>
+            </div>
+
+
+        </div>
+    </article>
+
+    <footer>
+        <div class="blue">
+            Todos os direitos reservados a From Software Inc;<br>
+            Este site foi feito somente para fins educacionais.
+        </div>
+    </footer>
 
 </body>
 
