adicionando style na tabela

--- a/index.html
+++ b/index.html
@@ -135,21 +135,53 @@
             <h2>Nossos Jogos</h2>
 
             <div class="tablejogo">
-                <table>
-                    <tr>
+                <table border="1px" cellpadding="4">
+                    <tr bgcolor="grey">
                         <th>Ano
                         </th>
                         <th>Jogo</th>
                         <th>É exclusivo?</th>
+                        <th>Plataformas</th>
                     </tr>
                     <tr>
                         <td>2009/2020</td>
                         <td>Demon's Souls</td>
                         <td>Sim</td>
+                        <th>PS3, PS5</th>
+                    </tr>
+                    <tr>
+                        <td>2011</td>
+                        <td>Dark Souls</td>
+                        <td>Não</td>
+                        <td>Todas</td>
+                    </tr>
+                    <tr>
+                        <td>2015</td>
+                        <td>Bloodborne</td>
+                        <td>Sim</td>
+                        <td>Playstation</td>
+                    </tr>
+                    <tr>
+                        <td>2016</td>
+                        <td>Dark Souls 3</td>
+                        <td>Não</td>
+                        <td>Todas, exceto nintendo switch e 7°geração</td>
+                    </tr>
+                    <tr>
+                        <td>2019</td>
+                        <td>Sekiro</td>
+                        <td>Não</td>
+                        <td>Todas, exceto nintendo switch e 7°geração</td>
+                    </tr>
+                    <tr>
+                        <td>2022</td>
+                        <td>Elden Ring</td>
+                        <td>Não</td>
+                        <td>Todas, exceto nintendo switch e 7°geração</td>
                     </tr>
                 </table>
             </div>
-
+            <br><br>
 
         </div>
     </article>
