--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>From Software</title>
-    <link rel="shortcut icon" href="/images/favicon/34054-3-dark-souls-file_64x64.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon/teste.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/index-style.css" type="text/css">
 </head>
 
@@ -45,7 +45,7 @@
 
             <ul>
 
-                <li class="linklist"><a href="#microsoft">Microsoft Japan Co., Ltd. </a></li>
+                <li class="linklist" id="microsoftlist"><a href="#microsoft">Microsoft Japan Co., Ltd.</a></li>
 
 
                 <li class="linklist"><a href="#sony">Sony Interactive Entertainment LLC</a></li>
@@ -175,6 +175,7 @@
                     </tr>
                 </table>
             </div>
+            <br> <sub class="centro">Aqui todas contam como 7°geração em diante</sub>
             <br><br>
 
         </div>
