--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>From Software</title>
-    <link rel="shortcut icon" href="/images/favicon/teste.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon/teste.ico">
     <link rel="stylesheet" href="./css/index-style.css" type="text/css">
 </head>
 
