--- a/index.html
+++ b/index.html
@@ -44,21 +44,15 @@
                 é de aproximadamente 132 milhões. <b>Temos grandes parceiros de negócios</b>, tais como:</p>
 
             <ul>
-
                 <li class="linklist" id="microsoftlist"><a href="#microsoft">Microsoft Japan Co., Ltd.</a></li>
-
 
                 <li class="linklist"><a href="#sony">Sony Interactive Entertainment LLC</a></li>
 
-
                 <li class="linklist"><a href="#nintendo">Nintendo Co., Ltd.</a></li>
-
 
                 <li class="linklist"> <a href="#capcom">CAPCOM Co., Ltd.</a></li>
 
-
-                <li class="linklist"><a href="#bandai">BANDAI NAMCO Entertainment Inc.
-                    </a></li>
+                <li class="linklist"><a href="#bandai">BANDAI NAMCO Entertainment Inc. </a></li>
 
                 <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION</a></li>
 
@@ -69,9 +63,7 @@
 
                 <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION </a></li>
 
-
                 <li class="linklist"><a href="#teste">Sixjoy Hong Kong Limited </a></li>
-
 
                 <li class="linklist"><a href="#sony">Sony Interactive Entertainment Inc.</a></li>
 
