fazendo nova página para formulário

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>From Software</title>
     <link rel="icon" href="images/favicon/teste.ico">
     <link rel="stylesheet" href="./css/index-style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -15,18 +16,18 @@
         <div id="menu">
             <img src="images/logos/From_Logo.webp" class="fromlogo">
             <div class="navLinks">
-                <a href="#" class="links">Quem somos ?</a><br>
-                <a href="#" class="links">Newsletter</a>
-                <details class="detailsNavLinks">
-                    <summary>Nossos Jogos</summary>
+                <a href="index.html" class="links">Quem somos ?</a><br>
+                <a href="newsletter.html" class="links">Newsletter</a>
+                <!-- <details class="detailsNavLinks">
+                     <summary>Nossos Jogos</summary>
                     <ul>
                         <li><a href="#" class="links">Demon's Souls</a></li>
                         <li><a href="#" class="links">Dark Souls 1</a></li>
                         <li><a href="#" class="links">Dark Souls 3</a></li>
                         <li><a href="#" class="links">Sekiro Shadows Die Twice</a></li>
                         <li><a href="#" class="links">Elden Ring</a></li>
-                    </ul>
-                </details>
+                    </ul> 
+                </details> -->
             </div>
         </div>
     </header>
@@ -35,9 +36,14 @@
             <h1>Quem somos ?</h1>
 
             <p>Fundada em 1986 no dia 1° de novembro, por
-                Naotoshi Zin nosso atual orientador e Hidetaka Miyazaki nosso atual presidente e um dos melhores
+                <span style="color:darkslateblue">Naotoshi Zin</span> nosso atual orientador e <i><ins>Hidetaka
+                        Miyazaki</ins></i> nosso
+                atual
+                presidente e um dos
+                melhores
                 level-designer do mundo dos videogames,
-                idealizador de um dos melhores e maiores jogos da atualidade.</p>
+                idealizador de um dos melhores e maiores jogos da atualidade.
+            </p>
 
             <p>Atualmente temos 349 funcionários com foco em produção de jogos e conteúdo para internet, nosso atual
                 capital
