--- a/newsletter.html
+++ b/newsletter.html
@@ -38,16 +38,20 @@
 
                 <form>
                     <p><label for="name">Nome</label>:
-                        <input id=nome type="text" name="nome" placeholder="Nome" required minlength="5">
+                        <input id=nome type="text" name="nome" placeholder="Nome" required minlength="5"
+                            class="formataInput">
                     </p>
 
                     <p> <label for="MelhorDS">Qual é o melhor ?</label>
                         <br>
-                        <input id="DS1" type="radio" value="DS1" name="ds"><label for="DS1">Dark Souls 1</label>
+                        <input id="DS1" type="radio" value="DS1" name="ds" class="formataInput"><label for="DS1">Dark
+                            Souls 1</label>
                         <br>
-                        <input id="DS2" type="radio" value="DS2" name="ds"><label for="DS2">Dark Souls 2</label>
+                        <input id="DS2" type="radio" value="DS2" name="ds" class="formataInput"><label for="DS2">Dark
+                            Souls 2</label>
                         <br>
-                        <input id="DS3" type="radio" value="DS3" name="ds"><label for="DS3">Dark Souls 3</label>
+                        <input id="DS3" type="radio" value="DS3" name="ds" class="formataInput"><label for="DS3">Dark
+                            Souls 3</label>
                         <br>
                     </p>
 
@@ -64,13 +68,15 @@
                     <p>
                         <label for="email">Qual seu email?</label>
                         <br>
-                        <input type="email" name="email" id="email" placeholder="Seu email aqui">
+                        <input type="email" name="email" id="email" placeholder="Seu email aqui" required
+                            class="formataInput">
                     </p>
 
                     <p>
                         <label for="senha">E sua senha ?</label>
                         <br>
-                        <input type="password" name="senha" id="senha" placeholder="Sua senha aqui">
+                        <input type="password" name="senha" id="senha" placeholder="Sua senha aqui" required
+                            class="formataInput">
                     </p>
 
                     <p>
