--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </tr>
                     <tr>
                         <td>2011</td>
-                        <td>Dark Souls</td>
+                        <td contenteditable="true">Dark Souls</td>
                         <td>Não</td>
                         <td>Todas</td>
                     </tr>
