Deixando o código mais clean

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </ul>
             <br>
-            <b>Principais acionistas: </b>
+            <b contenteditable="true">Principais acionistas: </b>
             <ul class="acionistalink">
 
                 <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION </a></li>
@@ -149,7 +149,7 @@
                     </tr>
                     <tr>
                         <td>2011</td>
-                        <td contenteditable="true">Dark Souls</td>
+                        <td>Dark Souls</td>
                         <td>Não</td>
                         <td>Todas</td>
                     </tr>
