--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             </ul>
             <br>
             <b contenteditable="true">Principais acionistas: </b>
-            <ul class="acionistalink">
+            O conteúdo abaixo é editavel, caso esteja no futuro saberá as reais parceiras da From "atual para você".
+            <ul class="acionistalink" contenteditable="true">
 
                 <li class="linklist"><a href="#kadokawa">KADOKAWA CORPORATION </a></li>
 
