--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         Miyazaki</ins></i> nosso
                 atual
                 presidente e um dos
-                melhores teste
+                melhores
                 level-designer do mundo dos videogames,
                 idealizador de um dos melhores e maiores jogos da atualidade.
             </p>
