--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navLinks">
                 <a href="index.html" class="links">Quem somos ?</a><br>
                 <a href="newsletter.html" class="links">Newsletter</a>
-                <!-- <details class="detailsNavLinks">
+                <details class="detailsNavLinks">
                      <summary>Nossos Jogos</summary>
                     <ul>
                         <li><a href="#" class="links">Demon's Souls</a></li>
@@ -26,8 +26,9 @@
                         <li><a href="#" class="links">Dark Souls 3</a></li>
                         <li><a href="#" class="links">Sekiro Shadows Die Twice</a></li>
                         <li><a href="#" class="links">Elden Ring</a></li>
+                        <li><a href="#">Armored Core IV: Fires of Rubicon</a></li>
                     </ul> 
-                </details> -->
+                </details>
             </div>
         </div>
     </header>
@@ -172,6 +173,11 @@
                         <td>Não</td>
                         <td>Todas, exceto nintendo switch e 7°geração</td>
                     </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Armored Core VI: Fires of Rubicon</td>
+                        <td>Não</td>
+                        <td>Todas, exceto nintendo switch e 7˚ geração</td>
                 </table>
             </div>
             <br> <sub class="centro">Aqui todas contam como 7°geração em diante</sub>
