--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
             <div class="navLinks">
                 <a href="index.html" class="links">Quem somos ?</a><br>
                 <a href="newsletter.html" class="links">Newsletter</a>
-                <details class="detailsNavLinks">
-                     <summary>Nossos Jogos</summary>
-                    <ul>
-                        <li><a href="#" class="links">Demon's Souls</a></li>
-                        <li><a href="#" class="links">Dark Souls 1</a></li>
-                        <li><a href="#" class="links">Dark Souls 3</a></li>
-                        <li><a href="#" class="links">Sekiro Shadows Die Twice</a></li>
-                        <li><a href="#" class="links">Elden Ring</a></li>
-                        <li><a href="#">Armored Core IV: Fires of Rubicon</a></li>
-                    </ul> 
-                </details>
+                <div class="hambmenu">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                    <details class="detailsNavLinks">
+                        <summary>Nossos Jogos</summary>
+                       <ul>
+                           <li><a href="#" class="links">Demon's Souls</a></li>
+                           <li><a href="#" class="links">Dark Souls 1</a></li>
+                           <li><a href="#" class="links">Dark Souls 3</a></li>
+                           <li><a href="#" class="links">Sekiro Shadows Die Twice</a></li>
+                           <li><a href="#" class="links">Elden Ring</a></li>
+                           <li><a href="#">Armored Core IV: Fires of Rubicon</a></li>
+                       </ul> 
+                   </details>
+                </div>
             </div>
         </div>
     </header>
