--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="icon" href="images/favicon/teste.ico">
     <link rel="stylesheet" href="./css/index-style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <style>
+        body {
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
 <body>
